src/objects/Promo_Details_Helper__c.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExactTarget_templateId__c</fullName>
        <label>ExactTarget templateId</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>ProductType</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromoName__c</fullName>
        <label>PromoName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Frequency__c</fullName>
        <label>Subscription Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>continuous</fullName>
                </value>
                <value>
                    <fullName>52 weeks</fullName>
                </value>
                <value>
                    <fullName>26 weeks</fullName>
                </value>
                <value>
                    <fullName>13 weeks</fullName>
                </value>
                <value>
                    <fullName>monthly</fullName>
                </value>
                <value>
                    <fullName>yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Product_Name__c</fullName>
        <label>Subscription Product Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPromo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isPromo</label>
        <type>Checkbox</type>
    </fields>
    <label>Promo Details Helper</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ExactTarget_templateId__c</columns>
        <columns>isPromo__c</columns>
        <columns>ProductType__c</columns>
        <columns>PromoName__c</columns>
        <columns>Region__c</columns>
        <columns>Subscription_Product_Name__c</columns>
        <columns>Duration__c</columns>
        <columns>Subscription_Frequency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PDH-{0000}</displayFormat>
        <label>Promo Details Helper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promo Details Helper</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>